# flask-mongo-crud-api

./: README.md  pyproject.toml
flask_demo/: app.py  debug.sh
tests/: test_flask_demo.py
