[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["Prathamesh Mali <mali.prathamesh82@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "7.1.2"
Flask = "^2.0.1"
pymongo = "^3.11.4"
Werkzeug = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
